<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartupActivity">

    <TextView
        android:id="@+id/tv_mwaslaty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_NAME"
        android:textColor="@android:color/white"
        android:textSize="70dp" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mwaslaty"
        android:layout_marginLeft="20dp"
        android:text="@string/APP_SLOGAN"
        android:textColor="#C0C0C0"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#008000"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/START"
        android:textColor="@android:color/white"
        android:textSize="50dp" />
</RelativeLayout>
