<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="from"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_get_source_from_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_from"
        android:background="#80ccff"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/list"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_get_source_from_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_get_source_from_list"
        android:layout_toRightOf="@id/btn_get_source_from_list"
        android:background="#80ccff"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/MAP"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_source_from_list"
        android:text="to"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_get_destination_from_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_to"
        android:background="#80ccff"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/list"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_get_destination_from_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_get_destination_from_list"
        android:layout_toRightOf="@id/btn_get_destination_from_list"
        android:background="#80ccff"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/MAP"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_destination_from_list"
        android:layout_centerHorizontal="true"
        android:background="#008000"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/GO"
        android:textColor="@android:color/white"
        android:textSize="50dp" />

</RelativeLayout>
